--- a/trunk/Controllers/ArticlePublisherController/ArticlePublisherController.csproj
+++ b/trunk/Controllers/ArticlePublisherController/ArticlePublisherController.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\..\References\Ra.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Data" />
