--- a/trunk/Controllers/CMSController/CMSController.csproj
+++ b/trunk/Controllers/CMSController/CMSController.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3E9EE1EF-3538-4AA8-A74D-8DCBFB2F7389}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -49,6 +49,7 @@
       <HintPath>..\..\References\Ra.Selector.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
