--- a/trunk/Modules/CMSModules/CMSModules.csproj
+++ b/trunk/Modules/CMSModules/CMSModules.csproj
@@ -49,6 +49,7 @@
       <HintPath>..\..\References\Ra.Selector.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
@@ -96,6 +97,10 @@
     <ProjectReference Include="..\..\Types\Language\LanguageRecords.csproj">
       <Project>{2C58869E-0F4A-4B4B-8B8D-6E9674CE909F}</Project>
       <Name>LanguageRecords</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Types\Settings\SettingsRecords.csproj">
+      <Project>{FDBF4787-9F3B-4983-AADA-5F4F115B2EAE}</Project>
+      <Name>SettingsRecords</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
