--- a/trunk/Modules/ForumModules/ForumModules.csproj
+++ b/trunk/Modules/ForumModules/ForumModules.csproj
@@ -48,6 +48,7 @@
       <HintPath>..\..\References\Ra.Selector.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -101,6 +102,10 @@
     <ProjectReference Include="..\..\Types\Language\LanguageRecords.csproj">
       <Project>{2C58869E-0F4A-4B4B-8B8D-6E9674CE909F}</Project>
       <Name>LanguageRecords</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Types\Settings\SettingsRecords.csproj">
+      <Project>{FDBF4787-9F3B-4983-AADA-5F4F115B2EAE}</Project>
+      <Name>SettingsRecords</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Types\User\UserRecords.csproj">
       <Project>{0A16609A-B619-43FF-9C64-9FC970AF46D8}</Project>
