--- a/trunk/Modules/SlidingMenu/SlidingMenuModules.csproj
+++ b/trunk/Modules/SlidingMenu/SlidingMenuModules.csproj
@@ -49,6 +49,7 @@
       <HintPath>..\..\References\Ra.Selector.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
