--- a/trunk/Portal/Web.config.template
+++ b/trunk/Portal/Web.config.template
@@ -1,5 +1,17 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
+  <!-- 
+  This is for using Intelligencia UrlRewriter since the Microsoft one doesn't work in IIS6...
+  <configSections>
+    <section
+			name="rewriter"
+			requirePermission="false"
+			type="Intelligencia.UrlRewriter.Configuration.RewriterConfigurationSectionHandler, Intelligencia.UrlRewriter" />
+  </configSections>
+  <rewriter>
+    <rewrite url="^([^\.]+[a-zA-Z0-9-_]+)$" to="/Default.aspx?ContentID=$1" />
+  </rewriter>
+  -->
   <system.webServer>
     <rewrite>
       <rules>
@@ -13,7 +25,7 @@
         </rule>
         <rule name="FriendlyUrlsRewrite" stopProcessing="true">
           <!-- Can contain / in path, but *NOT* at the end. Must not contain any extensions -->
-          <match url="^([^\.]+[a-z-A-Z-0-9]+)$" />
+          <match url="^([^\.]+[a-zA-Z0-9-_]+)$" />
           <!--
           In case you want to use .html as the file extension for your files...
           Remember to also change the "DefaultPageExtension" setting below if so...
@@ -96,6 +108,14 @@
   </appSettings>
 
   <system.web>
+    <!-- 
+    Intelligencia URL rewriter continued ...
+    <httpModules>
+      <add
+				type="Intelligencia.UrlRewriter.RewriterHttpModule, Intelligencia.UrlRewriter"
+				name="UrlRewriter" />
+    </httpModules>
+    -->
     <customErrors mode="Off" />
     <pages>
       <controls>
