--- a/trunk/Portal/Web.config.template
+++ b/trunk/Portal/Web.config.template
@@ -24,7 +24,13 @@
           <action type="Redirect" url="{C:1}" appendQueryString="false" redirectType="Permanent" />
         </rule>
         <rule name="FriendlyUrlsRewrite" stopProcessing="true">
-          <!-- Can contain / in path, but *NOT* at the end. Must not contain any extensions -->
+          <!--
+          Can contain / in path, but *NOT* at the end. Must not contain any extensions
+          If you want to use any type of extensions you must add this between the ) and the $ at the end
+          Like for instance for .html it becomes; ^([^\.]+[a-zA-Z0-9-_]+)\.html$
+          If you change it to have and extension, remember to also change the "DefaultPageExtension"'
+          setting below.
+          -->
           <match url="^([^\.]+[a-zA-Z0-9-_]+)$" />
           <!--
           In case you want to use .html as the file extension for your files...
