--- a/Modules/RaAjaxSamples/RaAjaxSamples.csproj
+++ b/Modules/RaAjaxSamples/RaAjaxSamples.csproj
@@ -55,6 +55,141 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeFileRetrieverController.cs" />
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Accordion.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_BehaviorDraggable.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_BehaviorDroppable.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_BehaviorObscurable.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_BehaviorUnveiler.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_BehaviorUpdater.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Button.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Calendar.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_CheckBox.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_DateTimePicker.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Dynamic.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectBorder.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectFadeIn.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectFadeOut.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectFocusAndSelect.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectHighlight.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectHighlightText.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectMove.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectRollDown.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectRollUp.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectSize.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_EffectTimeout.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_ExtButton.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_GlobalUpdater.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_HiddenField.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Image.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_ImageButton.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_InPlaceEdit.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Label.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_LinkButton.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Menu.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_MessageBox.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Panel.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_RadioButton.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_ResizeHandler.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_RichEdit.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_SelectList.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_SlidingMenu.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_TabControl.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_TextArea.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_TextBox.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Timer.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Tree.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_WebMethod.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CodeFiles\Docs_Controls_Window.ascx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Docs_Controls_BehaviorDraggable.ascx.cs">
       <DependentUpon>Docs_Controls_BehaviorDraggable.ascx</DependentUpon>
@@ -399,5 +534,6 @@
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)Portal\bin\DoxygenDotNetViewDocs"
 copy "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)Portal\bin\DoxygenDotNetViewDocs"</PostBuildEvent>
+    <PreBuildEvent>copy "$(SolutionDir)\Modules\RaAjaxSamples\*.ascx.cs" "$(SolutionDir)\Modules\RaAjaxSamples\CodeFiles"</PreBuildEvent>
   </PropertyGroup>
 </Project>
