--- a/trunk/Controllers/DoxygenDotNetViewDocsController/DoxygenDotNetViewDocsController.csproj
+++ b/trunk/Controllers/DoxygenDotNetViewDocsController/DoxygenDotNetViewDocsController.csproj
@@ -40,7 +40,9 @@
       <HintPath>..\..\References\Doxygen.NET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
