--- a/trunk/Ra.Brix.Core/Ra.Brix.Data/Ra.Brix.Data.csproj
+++ b/trunk/Ra.Brix.Core/Ra.Brix.Data/Ra.Brix.Data.csproj
@@ -42,6 +42,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Adapter.cs" />
+    <Compile Include="IPersistViewState.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="ActiveType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
