--- a/trunk/Controllers/SitemapController/SitemapController.csproj
+++ b/trunk/Controllers/SitemapController/SitemapController.csproj
@@ -73,4 +73,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)Portal\bin\Sitemap"
+copy "$(TargetDir)$(ProjectName).pdb" "$(SolutionDir)Portal\bin\Sitemap"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
